# CSP

./: CMakeLists.txt  assignment.h  conanfile.txt  constraint.h  csp.cpp  csp.h  domain.h  main.cpp  variable.cpp  variable.h
inference/: ac3_strategy.cpp  ac3_strategy.h  inference_strategy.h
